# jjagent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cats.md  debug-hook.sh  dist-workspace.toml  ideas.md  install.sh  justfile  watch_20251017-113526
.beads/: issues.jsonl
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: jja-describe.md  jja-split.md
.github/workflows/: ci.yml  release.yml
agents/: describe.md
commands/: after.md  describe.md  insert-after.md  into.md  session-summary.md
docs/: parallel-sessions-locking.md  stale-working-copy-problem.md  workflow-tasklist.md  workflow.md
docs/glaring_issues/: 01_stderr_handling_bug.md  02_debug_assert_in_production.md  03_fragile_empty_change_detection.md  04_silent_stdin_failure.md  05_violates_trailer_rule.md
docs/specs/: bash-tool-change-attribution.md  concurrent_session_detection.md  session_coordination.md  session_split.md
hooks/: hooks.json
plan/: spec-basic-behavior-revised.md  spec-basic-behavior.md
src/: hooks.rs  jj.rs  lib.rs  lock.rs  logger.rs  main.rs  session.rs
tests/: change_id_test.rs  cli_commands_test.rs  describe_test.rs  empty_commits_test.rs  hooks_test.rs  immutable_test.rs  integration_test.rs  parallel_sessions_test.rs  session_id_test.rs  session_test.rs  snapshot_test.rs  statusline_test.rs  tool_filtering_test.rs
tests/snapshots/: snapshot_test__conflict_path_multiple_parts.snap  snapshot_test__conflict_path_multiple_parts.snap.new  snapshot_test__conflict_preserves_user_changes.snap  (+39 more)
