[package]
name = "jjcc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
