[package]
name = "jjagent"
version = "0.2.0"
edition = "2024"
authors = ["Peter Schilling <code@schpet.com>"]
repository = "https://github.com/schpet/jjagent"
homepage = "https://github.com/schpet/jjagent"
description = "CLI for tracking coding agent changes with jujutsu"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
insta = "1.41"
regex = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
